Make this as upstream repo for openshift quickstart.

--- a/data/squeeze.cfg
+++ b/data/squeeze.cfg
@@ -1,13 +1,14 @@
 [db]
 type = mysql
-user = stylesen
+user = admin
 pass = password
 name = squeeze
+host = localhost
 
 [email]
 smtp_server = smtp.gmail.com
 smtp_port = 587
-smtp_username = senthil@stylesen.org
+smtp_username = username@gmail.com
 smtp_password = password
 smtp_starttls = True
 
